bug 818962 ConnectionManager ProcessPendingQForEntry needs to consider that TryToDispatch.. can modify queue r=honzab